--- a/exercices/m01/ex1/poulpes_d.css
+++ b/exercices/m01/ex1/poulpes_d.css
@@ -50,6 +50,8 @@ img, .legende {
     background-color: white;
     display: block;
     align-content: end;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .legende {
