--- a/exercices/m01/ex4/styles.css
+++ b/exercices/m01/ex4/styles.css
@@ -12,3 +12,88 @@ body {
     padding: 1em;
     border: black 1px solid;
 }
+
+a {
+    color: green;
+    text-decoration: none;
+}
+
+a:visited {
+    color: red;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    gap: 6px;
+}
+
+.header.left {
+    justify-content: flex-start;
+}
+
+.header.right {
+    text-align: end;
+    color: lightblue;
+}
+
+.journals {
+    margin: 2rem 0;
+    text-align: end;
+}
+
+.body {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 1rem;
+}
+
+.body .links {
+    flex: 1;
+    row-gap: 0.5rem;
+}
+
+.links a {
+    font-size: 1rem;
+    font-weight: normal;
+    margin: 0;
+}
+
+.hBarre {
+    font-weight: normal;
+    margin: 1rem 0;
+}
+
+.body .articles {
+    flex: 3;
+}
+
+.article {
+    margin: 1rem 0;
+    padding: 0.5rem;
+    border: 1px solid grey;
+    background-color: #FFF9C4;
+}
+
+.article h1 {
+    font-size: 1.2rem;
+    font-weight: normal;
+    margin: 0;
+    color: blue;
+}
+
+.article h2 {
+    font-weight: normal;
+    font-size: 12px;
+    margin: 6px 0;
+}
+
+.article p {
+    color: grey;
+}
