--- a/styles.css
+++ b/styles.css
@@ -46,12 +46,15 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 480px;
+    height: 480px;
     aspect-ratio: 1;
     position: relative;
     margin: 1rem;
     border-radius: 2rem;
     overflow: hidden;
     cursor: pointer;
+    background-color: #22c957;
 }
 
 .card-image {
@@ -85,25 +88,27 @@ body {
     position: absolute;
     left: 0px;
     top: 0px;
-    height: 100%;
-    width: 100%;
+    height: 490px;
+    width: 490px;
     color: white;
+    background-color: #8698e4;
     font-size: var(--font-size);
     font-weight: 500;
     word-wrap: break-word;
     transition: opacity 400ms;
-    /*-webkit-mask-image: radial-gradient(*/
-    /*        calc(var(--card-size) * 0.8) circle at var(--x) var(--y),*/
-    /*        rgb(255 255 255) 20%,*/
-    /*        rgb(255 255 255 / 25%),*/
-    /*        transparent*/
-    /*);*/
     scale: 1.03;
+    z-index: 20;
 }
 
-/*.card:hover .card-letters {*/
-/*    opacity: 1;*/
-/*}*/
+a {
+    z-index: -1;
+    background-color: red;
+}
+
+.button {
+    width: 60px;
+    height: 60px;
+}
 
 @media(max-width: 600px) {
     :root {
