--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,6 @@
     --border-rgb: 255 255 255;
     --border: 1px solid rgb(var(--border-rgb) / 20%);
 
-    --hyperplexed-main-rgb: 41 121 255;
-    --hyperplexed-main-light-rgb: 56 182 255;
-    --hyperplexed-secondary-rgb: 42 252 152;
-
     --card-size: 480px;
     --font-size: 1rem;
     --logo-size: calc(var(--card-size) * 0.3);
@@ -122,3 +118,67 @@ a {
     }
 }
 
+@keyframes intro {
+    0% {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    2% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    98% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+}
+
+.tooltip {
+    background-color: white;
+    padding: 24px;
+    width: fit-content;
+    height: fit-content;
+    margin: 12px;
+    border-radius: 12px;
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+    color: #1f1f1f;
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 6px;
+    position: absolute;
+    overflow: hidden;
+    opacity: 0;
+    animation: ease-in-out 5s intro;
+}
+
+.tooltip svg{
+    fill: forestgreen;
+}
+
+@keyframes statusbar {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
+
+}
+
+.statusbar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 4px;
+    background-color: forestgreen;
+    animation: statusbar 5s ease-in-out;
+}
